--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tamagui/babel-plugin": "^1.105.0",
     "@tamagui/config": "^1.105.0",
     "@tamagui/core": "^1.105.0",
+    "@tamagui/lucide-icons": "^1.105.0",
     "axios": "^1.7.2",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
@@ -37,6 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.4.0",
     "react-native-web": "~0.19.10",
     "tamagui": "^1.105.0"
   },
