--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@tamagui/babel-plugin": "^1.105.0",
     "@tamagui/config": "^1.105.0",
     "@tamagui/core": "^1.105.0",
+    "@tamagui/linear-gradient": "^1.105.2",
     "@tamagui/lucide-icons": "^1.105.0",
     "axios": "^1.7.2",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
