--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tamagui/core": "^1.105.0",
     "@tamagui/linear-gradient": "^1.105.2",
     "@tamagui/lucide-icons": "^1.105.0",
+    "@tamagui/toast": "^1.105.5",
     "axios": "^1.7.2",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "burnt": "^0.12.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
